<resources>
    <string name="app_name">FinalProject</string>

    <!-- Resources for OneSignal -->
    <string name="one_signal_id">fac14cd2-9650-4e40-9198-5ad4511176a8</string>

    <!-- Resources for LogInSignUpOptionsActivity -->
    <string name="log_in_text">Iniciar Sesión</string>
    <string name="sign_up_text">Registro</string>
    <string name="facebook_text">Iniciar con Facebook</string>

    <!-- Resources for Register1stActivity -->
    <string name="name_edit">Nombre</string>
    <string name="last_name_edit">Apellido paterno</string>
    <string name="mothers_last_name_edit">Apellido materno</string>
    <string name="email_edit">Correo</string>
    <string name="password_edit">Contraseña</string>
    <string name="next_button">Siguiente</string>
    <string name="facebook_button">Registro con Facebook</string>
    <string name="day_text">Dia</string>
    <string name="month_text">Mes</string>
    <string name="year_text">Año</string>
    <string name="date_button_text">Cambiar</string>
    <string name="date_text">Fecha de nacimiento</string>
    <string name="empty_error">Este campo no puede estar vacio</string>
    <string name="whitespace_eror">Este campo no puede comenzar o terminar con espacio</string>
    <string name="many_whitespace_error">No puede haber mas de un espacio entre palabras</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="invalid_password">Mínimo 8 caracteres</string>
    <string name="invalid_date">Fecha inválida</string>
    <string name="general_error">Error al llenar formato</string>
    <string name="description_error">Uno o más campos contienen información inválida, por favor corregir antes de continuar</string>
    <string name="ok_option">Revisar</string>
    <string name="username_alredy_exists">Nombre de usuario existente</string>
    <string name="username_alredy_exists_detail">Este nombre de usuario ya está registrado, por favor utiliza otro o inicia sesión</string>
    <string name="email_alredy_exists">Correo existente</string>
    <string name="email_alredy_exists_detail">Este correo ya está registrado, por favor utiliza otro o inicia sesión</string>

    <!-- Resources for Register2ndActivity -->
    <string name="select_title">Selecciona tu imágen de perfil</string>
    <string name="select_profile_button">Seleccionar</string>
    <string name="cancel_register_button">Cancelar</string>
    <string name="finish_register_button">Terminar</string>
    <string name="ask_for_permission">Es necesario el permiso de lectura de archivos para seleccionar una foto de perfil</string>
    <string name="cancel_message">Cancelar Registro</string>
    <string name="cancel_message_detail">¿Desea cancelar su registro y volver a la pantalla principal?</string>
    <string name="accept_message">Si</string>
    <string name="decline_message">No</string>

    <!-- Resources for LogInActivity -->
    <string name="wrong_credentials">Error al acceder</string>
    <string name="wrong_credentials_detail">El correo o la contraseña son incorrectos</string>
    <string name="user_banned">Usuario bloqueado</string>
    <string name="login_accept">Aceptar</string>

    <!-- Resources for MainMenu -->
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_events">Eventos</string>
    <string name="title_posts">Publicaciones</string>
    <string name="title_self_profile">Perfil</string>
    <string name="loguot_title">¿Desea cerrar sesión?</string>
    <string name="loguot_message">¿Desea cerrar la sesión actual y volver a la pantalla de inicio?</string>

    <!-- Resources for EventsMap, popup_details_event.xml and fragment_event_details.xml -->
    <string name="details_button">Ver más</string>
    <string name="organizer_name">Encargado:</string>
    <string name="date_event">Fecha:</string>
    <string name="quota">Cupo:</string>
    <string name="assist_option">Asistir</string>
    <string name="event_address">Direccion:</string>
    <string name="toast_assistance">Evento añadido a tu lista de eventos pendientes</string>
    <string name="permission_req">Permisos necesarios para funcionalidad correcta</string>
    <string name="quota_available">¡Cupo disponible!</string>
    <string name="quota_empty">Cupo lleno :(</string>

    <!-- Resources for fragment_self_profile.xml and SelfProfile -->
    <string name="friends_button">Amigos</string>
    <string name="messages_button">Mensajes</string>
    <string name="prev_ev_button">Asistió</string>
    <string name="next_ev_button">Próximos</string>
    <string name="age">Años</string>

    <!-- Resources for popup_details_event.xml -->
    <string name="new_post">Nueva Publicación</string>
    <string name="post_button">Publicar</string>

    <!-- Resources for fragment_foreign_profile.xml -->
    <string name="add_friend">Agregar</string>

    <!-- Resources for fragment_foreign_profile.xml -->
    <string name="friends_text">Amigos</string>
    <string name="requests_text">Solicitudes</string>
    <string name="sent_request">Solicitud enviada</string>
    <string name="existing_request">Solicitud en espera de confirmación</string>

    <!-- Resources for FriendsListFragment -->
    <string name="request_decision">Desición sobre solicitud</string>
    <string name="request_message">¿Qué desea hacer con la solicitud recibida?</string>
    <string name="request_accepted">Aceptar</string>
    <string name="request_rejected">Rechazar</string>
    <string name="friend_added">Amigo añadido</string>
    <string name="request_erased">Solicitud eliminada</string>

    <!-- Resources for ChatFragment -->
    <string name="empty_msg">No se puede enviar un mensaje vacío</string>
    <string name="hint_msg">Mensaje nuevo</string>

    <!-- Resources for MessagesListFragment -->
    <string name="existing_conversations">Conversaciones</string>

    <!-- Resources for EditProfile2ndFragment -->
    <string name="cancel_op">Cancelar modificacion</string>
    <string name="cancel_op_detail">¿Desea olvidar las modificaciones y volver a la pantalla de su perfil?</string>
    <string name="values_updated">Información actualizada</string>

    <!-- Resources for popup_report.xml -->
    <string name="report_popup_title">Reportar usuario</string>
    <string name="report_popup_options">Tipo de reporte</string>
    <string name="report_content">Razón de reporte</string>
    <string name="report_popup_button">Enviar</string>
    <string name="report_sent">Reporte enviado</string>

    <!-- Resources for fragment_admin_event_list.xml -->
    <string name="list_edit_ev_button">Editar</string>
    <string name="list_erase_ev_button">Eliminar</string>
    <string name="list_create_event">Nuevo evento</string>
    <string name="events_list_title">Eventos creados</string>

    <!-- Resources for AdminMainMenu -->
    <string name="title_activity_admin_main_menu">AdminMainMenu</string>
    <string name="title_admin_events">Eventos</string>
    <string name="title_admin_reports">Reportes</string>

    <!-- Resources for fragment_reports_admin.xml -->
    <string name="report_admin_title">Reportes pendientes</string>
    <string name="offender_user">Usuario reportado:</string>
    <string name="offended_user">De:</string>

    <!-- Resources for fragment_create_event1st.xml -->
    <string name="ev_name_edit">Nombre del evento</string>
    <string name="quota_edit">Cupo</string>
    <string name="init_hour_text">Hora Inicial</string>
    <string name="end_hour_text">Hora Final</string>
    <string name="event_with_users">¡Este evento ya tiene participantes!</string>
    <string name="erase_event_confirm">Eliminar evento</string>
    <string name="erase_event_detail">¿Está seguro que desea eliminar el evento seleccionado? Una vez que sea eliminado no podrá recuperarlo</string>

    <!-- Resources for fragment_create_event2nd.xml -->
    <string name="address_text">Dirección aproximada de la ubicación</string>
    <string name="location_error">Por favor toca el mapa para seleccionar una ubicación</string>

    <!-- Resources for ReportDetailsFragment and fragment_report_details.xml -->
    <string name="report_reason">Razon: </string>
    <string name="warning">Advertencia</string>
    <string name="delete">Baja</string>
    <string name="warning_added">Advertencia agregada</string>
    <string name="user_deleted">Usuario bloqueado</string>
</resources>
