<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/reportTitleTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/report_popup_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/spinnerTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/report_popup_options"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Spinner
        android:id="@+id/reportTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/white" />

    <EditText
        android:id="@+id/reportContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/report_content"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:maxLines="3"
        android:minLines="3"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/sendReportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_popup_button" />

</LinearLayout>