<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editProf1LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".EditProfile1stFragment">

    <EditText
        android:id="@+id/edNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
        android:hint="@string/name_edit"
        android:inputType="textVisiblePassword"
        android:maxLength="30" />

    <TextView
        android:id="@+id/edValidNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edLastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
        android:hint="@string/last_name_edit"
        android:inputType="textVisiblePassword"
        android:maxLength="30" />

    <TextView
        android:id="@+id/edValidLastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edMLastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
        android:hint="@string/mothers_last_name_edit"
        android:inputType="textVisiblePassword"
        android:maxLength="30" />

    <TextView
        android:id="@+id/edValidmLastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit"
        android:inputType="textVisiblePassword"
        android:maxLength="255" />

    <TextView
        android:id="@+id/edValidEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:hint="@string/password_edit"
            android:inputType="textPassword"
            android:maxLength="30" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/edValidPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edDayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day_text" />

            <Spinner
                android:id="@+id/edDaySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edMonthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/month_text" />

            <Spinner
                android:id="@+id/edMonthSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/year_text" />

            <Spinner
                android:id="@+id/edYearSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/edValidDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <Button
        android:id="@+id/edNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/next_button" />

</LinearLayout>