<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background_blue_gradient"
    tools:context=".User.Register1stActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30"
            android:textColor="@android:color/white"
            android:textColorHint="@color/TransparentHint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/validNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/last_name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30"
            android:textColor="@android:color/white"
            android:textColorHint="@color/TransparentHint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/validLastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mLastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/mothers_last_name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30"
            android:textColor="@android:color/white"
            android:textColorHint="@color/TransparentHint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/validmLastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="255"
            android:textColor="@android:color/white"
            android:textColorHint="@color/TransparentHint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/validEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/TransparentHint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:hint="@string/password_edit"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@android:color/white"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/validPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_text"
                android:textColor="@color/TransparentHint" />

            <Button
                android:id="@+id/pickDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/frost_button_selector"
                android:onClick="showDatePicker"
                android:text="@string/date_button_text"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/validDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frost_button_selector"
            android:onClick="continueRegister"
            android:text="@string/next_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/frost_button_selector"
            android:onClick="registerFacebook"
            android:text="@string/facebook_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>